# Raster-Graphics

./: .gitignore  CMakeLists.txt  documentation.txt  main  main.cpp  task.txt
images/: appolonian.pgm  image.pbm  image1.pgm  image2.ppm  image3.ppm  image3_modified.ppm
include/: RasterGraphicsEditor.hpp
include/commands/: AddCommand.hpp  CloseCommand.hpp  Command.hpp  CommandInterpreter.hpp  ExitCommand.hpp  GrayscaleCommand.hpp  InfoCommand.hpp  LoadCommand.hpp  MonochromeCommand.hpp  NegativeCommand.hpp  RotateCommand.hpp  SaveAsCommand.hpp  SaveCommand.hpp  SwitchCommand.hpp
include/image/: ImageContainer.hpp  ImageFactory.hpp  Pixel.hpp
include/image/types/: Image.hpp  PBMImage.hpp  PGMImage.hpp  PPMImage.hpp
include/session/: Session.hpp  SessionEditor.hpp
include/utils/: Constants.hpp  Helpers.hpp  Matrix.hpp
src/: RasterGraphicsEditor.cpp
src/commands/: AddCommand.cpp  CloseCommand.cpp  Command.cpp  CommandInterpreter.cpp  ExitCommand.cpp  GrayscaleCommand.cpp  InfoCommand.cpp  LoadCommand.cpp  MonochromeCommand.cpp  NegativeCommand.cpp  RotateCommand.cpp  SaveAsCommand.cpp  SaveCommand.cpp  SwitchCommand.cpp
src/image/: ImageContainer.cpp  ImageFactory.cpp  Pixel.cpp
src/image/types/: Image.cpp  PBMImage.cpp  (+2 more)
src/session/: Session.cpp  SessionEditor.cpp
src/utils/: Helpers.cpp
tests/: test  test.cpp  test_container  test_container.cpp  test_factory  test_factory.cpp  test_matrix  test_matrix.cpp  test_pbm  test_pbm.cpp  test_pgm  test_pgm.cpp  test_ppm  test_ppm.cpp  test_random  test_random.cpp  test_session  test_session.cpp
